# quiz_mainGUI

./: main.py  pyproject.toml
