[tool.poetry]
name = "repl_python3_beta_quizMainMenuGUIv1"
version = "0.1.0"
description = ""
authors = ["AyanaLoweMcPher <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pywaffle = "^0.6.1"
data = "^0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
